duniverse/lwt/test/ppx_expect/cases/match_4.ml
let _ =
  match%lwt
    Lwt.return ()
  with
  | () ->
    Lwt.return ()
  | exception End_of_file ->
    Lwt.return 5
